[package]
name = "ui-learning"
version = "0.1.0"
authors = ["dollarkiller <wangy@mvalley.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
orbtk = "0.3.1-alpha1"